# kraken-client

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
src/kraken_client/: __init__.py  client.py
src/tests/: test_all.py
